--- a/main.html
+++ b/main.html
@@ -19,37 +19,151 @@
         <h1>Squad naam</h1>
     </div>
 
-    <!-- Onze eigenschappen etc -->
+    <!-- Onze eigenschappen etc, 1 deel per persoon - kan 6 of 5, ligt eraan of Auke mee wilt doen -->
     <div id="pageContent">
 
         <div id="part1" onclick="extend(1)">
             <h1 id="part1H">Persoon 1</h1>
-            <p id="part1P"></p>
+
+            <div id="short1">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
+
+            <div id="long1">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
         </div>
 
         <div id="part2" onclick="extend(2)">
             <h1 id="part2H">Persoon 2</h1>
-            <p id="part2P"></p>
+
+            <div id="short2">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
+
+            <div id="long2">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
         </div>
 
         <div id="part3" onclick="extend(3)">
             <h1 id="part3H">Persoon 3</h1>
-            <p id="part3P"></p>
+
+            <div id="short3">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
+
+            <div id="long3">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
         </div>
 
         <div id="part4" onclick="extend(4)">
-            <h1 id="part4H">Persoon 4</h1>
-            <p id="part4P"></p>
+            <h1 id="part4H">Joep van Dam</h1>
+
+            <div id="short4">
+                <ol class="list">
+                    <li>Katten</li>
+                    <li>Gamen</li>
+                    <li>Ervaring</li>
+                    <li>Front-end</li>
+                    <li>Fietsen</li>
+                </ol>
+            </div>
+
+            <div id="long4">
+                <ol class="list">
+                    <li>Houdt erg van katten, wil er het liefst later <em>honderden</em> in huis nemen.</li>
+                    <li>Houdt van gamen, speelt elke dag op z'n minst een paar uur games zoals Rocket League.</li>
+                    <li>Heeft wel wat ervaring met programmeren, vooral in de basis/frontend\/.</li>
+                    <li>Is het meest geïnteresseerd in front-end design, maar dit kan altijd nog veranderen.</li>
+                    <li>Vindt het fijn om te fietsen in zijn vrije tijd.</li>
+                </ol>
+            </div>
         </div>
 
         <div id="part5" onclick="extend(5)">
-            <h1 id="part5H">Persoon 5</h1>
-            <p id="part5P"></p>
+            <h1 id="part5H">Melvin Korving</h1>
+
+            <div id="short5">
+                <ol class="list">
+                    <li>Sport</li>
+                    <li>PABO</li>
+                    <li>Reizen</li>
+                    <li>Films</li>
+                    <li>Gamen</li>
+                </ol>
+            </div>
+
+            <div id="long5">
+                <ol class="list">
+                    <li>Houdt van sporten en is dus ook vaak te vinden in de sportschool.</li>
+                    <li>Hiervoor de PABO gedaan en heeft dus 0 kennis over programmeren/coderen.</li>
+                    <li>Houdt van verre reizen maken, wilt nog heel graag een keer naar Tokyo.</li>
+                    <li>Is een groot film-liefhebber en gaat ook bijna elk weekend met vrienden naar de film.</li>
+                    <li>Vindt het verder gezellig om op de PC te gamen met vrienden.</li>
+                </ol>
+            </div>
         </div>
 
         <div id="part6" onclick="extend(6)">
             <h1 id="part6H">Persoon 6</h1>
-            <p id="part6P"></p>
+
+            <div id="short6">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
+
+            <div id="long6">
+                <ol class="list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </div>
         </div>
 
     </div>
