--- a/main.html
+++ b/main.html
@@ -143,25 +143,25 @@
         </div>
 
         <div id="part6" onclick="extend(6)">
-            <h1 id="part6H">Persoon 6</h1>
+            <h1 id="part6H">Auke Boogaart</h1>
 
             <div id="short6">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Sport</li>
+                    <li>Formula1</li>
+                    <li>Gamen</li>
+                    <li>MBO/HBO</li>
+                    <li>Motor</li>
                 </ol>
             </div>
 
             <div id="long6">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Sport 5x per week.</li>
+                    <li>Vindt formula 1 kijken leuk.</li>
+                    <li>Houdt zeker van een potje gamen.</li>
+                    <li>Heeft hiervoor MBO gedaan, en een half jaar HBO in de ICT.</li>
+                    <li>Wilt een motorrijbewijs halen.</li>
                 </ol>
             </div>
         </div>
