Tobias' zinnen toegevoegd

--- a/main.html
+++ b/main.html
@@ -71,25 +71,25 @@
         </div>
 
         <div id="part3" onclick="extend(3)">
-            <h1 id="part3H">Persoon 3</h1>
+            <h1 id="part3H">Tobias van Dorp</h1>
 
             <div id="short3">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>HAVO</li>
+                    <li>Muziek</li>
+                    <li>Humor</li>
+                    <li>Ervaring</li>
+                    <li>Praten</li>
                 </ol>
             </div>
 
             <div id="long3">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Heeft hiervoor HAVO gedaan en daarna een tussenjaar gehad.</li>
+                    <li>Is bijna elke dag bij dezelfde groep vrienden in Amersfoort, waar ze in een studio muziek maken.</li>
+                    <li>Houdt heel erg van sarcastische humor en woordgrapjes.</li>
+                    <li>Heeft nog geen ervaring in de ICT, heeft zichzelf voor zijn gevoel aardig in het diepe gegooid.</li>
+                    <li>Kan urenlang praten of video's kijken over zwarte gaten, de zin van het leven of de diepzinnigheid van psychedelica.</li>
                 </ol>
             </div>
         </div>
@@ -111,7 +111,7 @@
                 <ol class="list">
                     <li>Houdt erg van katten, wil er het liefst later <em>honderden</em> in huis nemen.</li>
                     <li>Houdt van gamen, speelt elke dag op z'n minst een paar uur games zoals Rocket League.</li>
-                    <li>Heeft wel wat ervaring met programmeren, vooral in de basis/frontend\/.</li>
+                    <li>Heeft wel wat ervaring met programmeren, vooral in de basis/front-end\/.</li>
                     <li>Is het meest geïnteresseerd in front-end design, maar dit kan altijd nog veranderen.</li>
                     <li>Vindt het fijn om te fietsen in zijn vrije tijd.</li>
                 </ol>
