Milan's zinnen toegevoegd

--- a/main.html
+++ b/main.html
@@ -47,25 +47,25 @@
         </div>
 
         <div id="part2" onclick="extend(2)">
-            <h1 id="part2H">Persoon 2</h1>
+            <h1 id="part2H">Milan van der Linden</h1>
 
             <div id="short2">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>MBO</li>
+                    <li>Datacenters</li>
+                    <li>AI</li>
+                    <li>Trader</li>
+                    <li>Feestje</li>
                 </ol>
             </div>
 
             <div id="long2">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Heeft hiervoor MBO-Applicatie & Media ontwikkeling gedaan.</li>
+                    <li>Heeft in zijn tussenjaar gewerkt in datacenters door heel Nederland.</li>
+                    <li>Interesse ligt vooral bij de AI.</li>
+                    <li>Gecertificeerd trader in de Forex markt.</li>
+                    <li>Houdt van een goed feestje.</li>
                 </ol>
             </div>
         </div>
