--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
     <div id="pageContent">
 
         <div id="part1" onclick="extend(1)">
-            <h1 id="part1H">Persoon 1</h1>
+            <h1 id="part1H">Samet Tanis</h1>
 
             <div id="short1">
                 <ol class="list">
@@ -37,11 +37,11 @@
 
             <div id="long1">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Ding 1</li>
+                    <li>Ding 2</li>
+                    <li>Ding 3</li>
+                    <li>Ding 4</li>
+                    <li>Ding 5</li>
                 </ol>
             </div>
         </div>
