--- a/main.html
+++ b/main.html
@@ -27,21 +27,21 @@
 
             <div id="short1">
                 <ol class="list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>21</li>
+                    <li>Vooropleiding</li>
+                    <li>Interesse</li>
+                    <li>Werk</li>
+                    <li>Hobbys</li>
                 </ol>
             </div>
 
             <div id="long1">
                 <ol class="list">
-                    <li>Ding 1</li>
-                    <li>Ding 2</li>
-                    <li>Ding 3</li>
-                    <li>Ding 4</li>
-                    <li>Ding 5</li>
+                    <li>Is 21 jaar oud.</li>
+                    <li>Heeft als vooropleiding vakman ondernemen niveu 4 gedaan.</li>
+                    <li>Interesse ligt bij Business & IT management.</li>
+                    <li>Werkt als figurant, tankstationmedewerker, timmerman.</li>
+                    <li>Hobbys: kickboxen, reizen, uitgaan, wandelen, en sleutelen aan de auto.</li>
                 </ol>
             </div>
         </div>
