--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             <div id="short1">
                 <ol class="list">
                     <li>21</li>
-                    <li>Vooropleiding</li>
+                    <li>Ondernemen</li>
                     <li>Interesse</li>
                     <li>Werk</li>
                     <li>Hobbys</li>
