--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
         <h1>Squad naam</h1>
     </div>
 
-    <!-- Onze eigenschappen etc, 1 deel per persoon - kan 6 of 5, ligt eraan of Auke mee wilt doen -->
+    <!-- Onze eigenschappen etc, 1 deel per persoon -->
     <div id="pageContent">
 
         <div id="part1" onclick="extend(1)">
@@ -27,7 +27,7 @@
 
             <div id="short1">
                 <ol class="list">
-                    <li>21</li>
+                    <li>21 jaar</li>
                     <li>Ondernemen</li>
                     <li>Interesse</li>
                     <li>Werk</li>
