--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 <body>
 
     <!-- Titel met squad naam -->
-    <div id="titleTop" onclick="makeBanner()">
+    <div id="titleTop">
         <h1>Squad naam</h1>
     </div>
 
