--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 
     <!-- Titel met squad naam -->
     <div id="titleTop">
-        <h1>D.E. Cafe</h1>
+        <h1><span class="red">D</span>.<span class="red">E</span>. Cafe</h1>
     </div>
 
     <!-- Onze eigenschappen etc, 1 deel per persoon -->
